--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "builds": [{ "src": "package.json", "use": "@vercel/static-build" }],
-  "installCommand": "npm ci",
+  "installCommand": "npm install",
   "buildCommand": "node node_modules/vite/bin/vite.js build",
   "outputDirectory": "dist",
   "routes": [
